--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "ranker",
   "version": "0.1.0",
   "private": true,
-  "homepage": "http://jakeswork.github.io/ranker",
+  "homepage": "http://gyaru.github.io/ranker",
   "dependencies": {
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
@@ -21,7 +21,7 @@
     "@types/react-jss": "^10.0.0",
     "@types/react-router-dom": "^5.1.3",
     "@types/react-select": "^3.0.10",
-    "circular-std": "^1.0.3",
+    "@vetixy/circular-std": "^1.0.0",
     "classnames": "^2.2.6",
     "enzyme": "^3.11.0",
     "enzyme-adapter-react-16": "^1.15.2",
@@ -40,7 +40,7 @@
     "react-scripts": "3.4.0",
     "react-select": "^3.0.8",
     "reset-css": "^5.0.1",
-    "typescript": "~3.7.2"
+    "typescript": "^3.8.3"
   },
   "scripts": {
     "start": "react-scripts start",
